[gd_scene load_steps=8 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://screens/settings/settings.gd" type="Script" id=2]
[ext_resource path="res://title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://background.tscn" type="PackedScene" id=4]
[ext_resource path="res://organ/organs.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 32, 32 )

[node name="Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.000438054
anchor_top = 0.000657082
anchor_right = 0.999562
anchor_bottom = 1.00066
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]
position = Vector2( 240, 160 )
allow_particles = false

[node name="CloseMidParticles" parent="Background" index="1"]
visible = false

[node name="MidParticles" parent="Background" index="3"]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -132.5
margin_right = 132.0
margin_bottom = 132.5
rect_min_size = Vector2( 200, 100 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 264.0
margin_bottom = 82.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_top = 9.0
margin_right = 32.0
margin_bottom = 41.0
size_flags_vertical = 4
texture = SubResource( 2 )

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 36.0
margin_right = 228.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "SETTINGS"
align = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 232.0
margin_top = 9.0
margin_right = 264.0
margin_bottom = 41.0
size_flags_vertical = 4
texture = SubResource( 1 )

[node name="SfxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 264.0
margin_bottom = 99.0

[node name="SfxLabel" type="Label" parent="VBoxContainer/SfxContainer"]
margin_right = 110.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "sfx:"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer/SfxContainer"]
margin_left = 114.0
margin_right = 264.0
margin_bottom = 9.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 264.0
margin_bottom = 116.0

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
margin_right = 110.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "music:"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
margin_left = 114.0
margin_right = 264.0
margin_bottom = 9.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3

[node name="ParticlesCheckbox" type="CheckBox" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 264.0
margin_bottom = 136.0
pressed = true
text = "enable particles"

[node name="FullscreenButton" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 264.0
margin_bottom = 185.0
text = "toggle fullscreen"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 189.0
margin_right = 264.0
margin_bottom = 234.0

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 44.4022
margin_bottom = 45.0
text = "quit"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 264.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "back"
[connection signal="visibility_changed" from="." to="." method="_on_Settings_visibility_changed"]
[connection signal="value_changed" from="VBoxContainer/SfxContainer/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/ParticlesCheckbox" to="." method="_on_ParticlesCheckbox_toggled"]
[connection signal="pressed" from="VBoxContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="Background"]
